# AdventOfCode2024

./: CMakeLists.txt
cmake/: build_config.cmake
tasks/: CMakeLists.txt
tasks/day01/: task.cpp
tasks/day02/: task.cpp
tasks/day03/: task.cpp
tasks/day04/: task.cpp
tasks/day05/: task.cpp
tasks/day06/: task.cpp
tasks/day07/: task.cpp
tasks/day08/: task.cpp
tasks/day09/: task.cpp
tasks/day10/: task.cpp
tasks/day11/: task.cpp
tasks/day12/: task.cpp
tasks/day13/: task.cpp
tasks/day14/: task.cpp
tasks/day15/: task.cpp
tasks/day16/: task.cpp
tasks/day17/: task.cpp
tasks/day18/: task.cpp
tasks/day19/: task.cpp
tasks/day20/: task.cpp
tasks/day21/: task.cpp
tasks/day22/: task.cpp
tasks/day23/: task.cpp
tasks/day24/: task.cpp
tasks/day25/: CMakeLists.txt  task.cpp
utils/: CMakeLists.txt
utils/include/utils/: Timer.h
